[misc] Use jakarta package, replace the usage of some deprecated APIs, small code improvements.