@@ -19,14 +19,13 @@
  */
 package org.xwiki.netflux.internal;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import javax.inject.Inject;
-import javax.inject.Named;
-import javax.inject.Singleton;
+import jakarta.inject.Inject;
+import jakarta.inject.Named;
+import jakarta.inject.Singleton;
 
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -79,7 +78,7 @@ public class EffectiveAuthorSetterListener extends AbstractLocalEventListener
         Request request = this.container.getRequest();
         getEffectiveAuthor(request).ifPresent(effectiveAuthor -> {
             this.logger.debug("Setting the effective author of the request to [{}].", effectiveAuthor);
-            request.setProperty(Request.ATTRIBUTE_EFFECTIVE_AUTHOR, effectiveAuthor);
+            request.setAttribute(Request.ATTRIBUTE_EFFECTIVE_AUTHOR, effectiveAuthor);
         });
     }
 
@@ -113,8 +112,8 @@ public class EffectiveAuthorSetterListener extends AbstractLocalEventListener
      */
     private List<String> getChannelsFromRequest(Request request)
     {
-        List<String> channels = request.getProperties("netfluxChannel").stream()
-            .map(value -> Objects.toString(value, null)).filter(StringUtils::isNotBlank).collect(Collectors.toList());
+        List<String> channels =
+            Arrays.stream(request.getParameterValues("netfluxChannel")).filter(StringUtils::isNotBlank).toList();
         this.logger.debug("Channels from request: [{}].", channels);
         return channels;
     }
